<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Background"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/Add_Track_Main"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/Foreground"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/add_track"
        android:textSize="20sp"
        app:cornerRadius="0dp"
        app:iconPadding="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/All_Music" />

    <Button
        android:id="@+id/All_Music"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/all_music"
        android:textSize="20sp"
        app:cornerRadius="0dp"
        app:iconPadding="0dp"
        app:layout_constraintEnd_toStartOf="@+id/Playlists"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/Playlists"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/playlists"
        android:textSize="20sp"
        app:cornerRadius="0dp"
        app:iconPadding="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/All_Music"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/Tracklist"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="visible"
        android:contentDescription="@string/track_in_list_view"
        app:layout_constraintBottom_toTopOf="@+id/Played_Track_UI"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Add_Track_Main"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/Open_Played_Track"
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:contentDescription="@string/open_played_track"
        android:onClick="GotoPlayedTrack"
        app:layout_constraintBottom_toBottomOf="@+id/Tracklist"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@android:drawable/arrow_up_float" />

    <FrameLayout
        android:id="@+id/Played_Track_UI"
        android:layout_width="0dp"
        android:layout_height="110dp"
        android:background="@color/Foreground"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/Prev_Track_Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="230dp"
            android:contentDescription="@string/prev_track_button"
            app:srcCompat="@android:drawable/ic_media_previous" />

        <ImageButton
            android:id="@+id/Next_Track_Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="350dp"
            android:contentDescription="@string/next_track_button"
            app:srcCompat="@android:drawable/ic_media_next" />

        <ImageButton
            android:id="@+id/Play_Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="290dp"
            android:contentDescription="@string/pause_unpause_button"
            app:srcCompat="@android:drawable/ic_media_play" />

        <TextView
            android:id="@+id/Song_Name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="110dp"
            android:layout_marginTop="-20dp"
            android:text="@string/song_name"
            android:textColor="@color/TextHeader" />


        <TextView
            android:id="@+id/Author_Name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="110dp"
            android:layout_marginTop="50dp"
            android:text="@string/author_name"
            android:textColor="@color/TextBottom" />

        <ImageView
            android:id="@+id/Song_Cover"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="5dp"
            tools:src="@tools:sample/avatars" />
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>