<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Background"
    android:scaleX="1"
    android:scaleY="1">

    <ImageButton
        android:id="@+id/Details_Delete_Button"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:background="@color/Foreground"
        android:contentDescription="@string/track_delete_button"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Details_Redact_Button"
        app:srcCompat="@android:drawable/ic_menu_delete" />

    <ImageButton
        android:id="@+id/Details_Redact_Button"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:background="@color/Foreground"
        android:contentDescription="@string/track_redact_button"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/Details_Delete_Button"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@android:drawable/ic_menu_edit" />

    <ImageView
        android:id="@+id/Details_Cover"
        android:layout_width="276dp"
        android:layout_height="268dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageButton
        android:id="@+id/Exit_Button"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:contentDescription="@string/cross_exit_button"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/btn_dialog" />

    <EditText
        android:id="@+id/Details_Track_Name"
        android:layout_width="350dp"
        android:layout_height="64dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:ems="15"
        android:inputType="text"
        android:text="@string/empty_track_name"
        android:textColor="@color/TextHeader"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Details_Cover" />

    <EditText
        android:id="@+id/Details_Track_Author"
        android:layout_width="350dp"
        android:layout_height="64dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:ems="15"
        android:inputType="text"
        android:text="@string/empty_track_author"
        android:textColor="@color/TextHeader"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Details_Track_Name" />

    <EditText
        android:id="@+id/Details_Track_Album"
        android:layout_width="350dp"
        android:layout_height="64dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:ems="15"
        android:inputType="text"
        android:text="@string/empty_track_album"
        android:textColor="@color/TextHeader"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Details_Track_Author" />

    <TextView
        android:id="@+id/Details_Track_Length"
        android:layout_width="350dp"
        android:layout_height="64dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:gravity="center_vertical"
        android:text="@string/empty_track_length"
        android:textColor="@color/TextHeader"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Details_Track_Album" />
</androidx.constraintlayout.widget.ConstraintLayout>