<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/played_track"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Background">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        app:layout_constraintDimensionRatio="w,1:1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/Played_Track_Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="30dp"
        android:text="@string/empty_track_name"
        android:textColor="@color/TextHeader"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/Played_Track_Author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:text="@string/empty_track_author"
        android:textColor="@color/TextBottom"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Played_Track_Name" />

    <TextView
        android:id="@+id/Played_Track_Album"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:text="@string/empty_track_album"
        android:textColor="@color/TextBottom"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Played_Track_Author" />

    <ImageButton
        android:id="@+id/Played_Track_Exit"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="5dp"
        android:contentDescription="@string/cross_exit_button"
        android:onClick="GotoMainMenu"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/btn_dialog" />

    <ImageButton
        android:id="@+id/Played_Track_Next"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginEnd="40dp"
        android:contentDescription="@string/next_track_button"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="@+id/Played_Track_Play"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_media_next" />

    <ImageButton
        android:id="@+id/Played_Track_Play"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginBottom="40dp"
        android:contentDescription="@string/pause_unpause_button"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/Played_Track_Next"
        app:layout_constraintStart_toEndOf="@+id/Played_Track_Prev"
        app:srcCompat="@android:drawable/ic_media_play" />

    <ImageButton
        android:id="@+id/Played_Track_Prev"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="40dp"
        android:contentDescription="@string/prev_track_button"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="@+id/Played_Track_Play"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@android:drawable/ic_media_previous" />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:progressBackgroundTint="@color/TextHeader"
        android:progressTint="@color/Head"
        android:thumbTint="@color/Head"
        app:layout_constraintBottom_toTopOf="@+id/Played_Track_Play"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Played_Track_Album" />
</androidx.constraintlayout.widget.ConstraintLayout>